# collective.ftw.upgrade

./: .gitignore  .meta.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  README.rst  constraints-mxdev.txt  instance.yaml  mx.ini  pyproject.toml  tox.ini
.github/workflows/: meta.yml  test-matrix.yml
docs/: HISTORY.txt
news/: +5bc093aa.breaking.md  +cf4e0ed4.documentation.md  +dd9bb5ce.internal.md  14.feature.md  16.bugfix.md  18.bugfix.md  20.feature.md  22.feature.1.md  22.feature.md  24.feature  26.bugfix.md  5.feature.md
scripts/: create-upgrade
src/collective/ftw/upgrade/: __init__.py  configure.zcml  events.py  exceptions.py  executioner.py  gatherer.py  helpers.py  indexing.py  interfaces.py  meta.zcml  migration.py  placefulworkflow.py  progresslogger.py  step.py  testing.py  transactionnote.py  utils.py  workflow.py  zcml.py
src/collective/ftw/upgrade/bbb/: interfaces.py
src/collective/ftw/upgrade/browser/: configure.zcml  manage.py
src/collective/ftw/upgrade/browser/resources/: manage.css  manage.js
src/collective/ftw/upgrade/browser/templates/: manage.pt  manage_plain.pt
src/collective/ftw/upgrade/command/: __init__.py  combine_bundles.py  create.py  formatter.py  help.py  install.py  jsonapi.py  list_cmd.py  plone_upgrade.py  plone_upgrade_needed.py  recook.py  sites.py  terminal.py  touch.py  user.py  utils.py
src/collective/ftw/upgrade/directory/: recorder.py  scaffold.py  scanner.py  subscribers.py  wrapper.py  zcml.py
src/collective/ftw/upgrade/intid/: configure.zcml
src/collective/ftw/upgrade/jsonapi/: base.py  configure.zcml  exceptions.py  plonesite.py  utils.py  zopeapp.py
src/collective/ftw/upgrade/profiles/default/: browserlayer.xml  controlpanel.xml
src/collective/ftw/upgrade/profiles/uninstall/: browserlayer.xml  controlpanel.xml
src/collective/ftw/upgrade/tests/: base.py  builders.py  helpers.py  layers.py  test_bbb.py  test_builders.py  test_command.py  test_command_combine_bundles.py  test_command_create.py  test_command_fake_terminal.py  test_command_help.py  test_command_install.py  test_command_jsonapi.py  test_command_list.py  test_command_plone_upgrade.py  test_command_plone_upgrade_needed.py  test_command_recook.py  test_command_sites.py  test_command_touch.py  test_command_user.py  test_command_utils.py  test_directory_meta_directive.py  test_directory_recorder.py  test_directory_scaffold.py  test_directory_scanner.py  test_directory_upgrade_steps.py  test_executioner.py  test_gatherer.py  test_helpers.py  test_jsonapi_plonesite.py  test_jsonapi_zopeapp.py  test_layers.py  test_manage_view.py  test_meta_import_profile.py  test_migration.py  test_placefulworkflow.py  test_post_upgrade.py  test_progresslogger.py  test_resource_registries.py  test_savepoint_iterator.py  (+5 more)
src/ftw/upgrade/: __init__.py  events.py  executioner.py  gatherer.py  indexing.py  interfaces.py  meta.zcml  placefulworkflow.py  progresslogger.py  step.py  testing.py  utils.py  workflow.py  zcml.py
src/ftw/upgrade/browser/: manage.py
src/ftw/upgrade/browser/templates/: manage_plain.pt
src/ftw/upgrade/command/: __init__.py  create.py  formatter.py  help.py  install.py  jsonapi.py  list_cmd.py  plone_upgrade.py  plone_upgrade_needed.py  sites.py  touch.py  user.py  utils.py
src/ftw/upgrade/directory/: recorder.py  scaffold.py  scanner.py  subscribers.py  wrapper.py  zcml.py
src/ftw/upgrade/intid/: configure.zcml
src/ftw/upgrade/jsonapi/: base.py  configure.zcml  plonesite.py  utils.py  zopeapp.py
src/ftw/upgrade/profiles/default/: browserlayer.xml  controlpanel.xml
src/ftw/upgrade/tests/: base.py  builders.py  layers.py  test_builders.py  test_command.py  test_command_create.py  test_command_fake_terminal.py  test_command_help.py  test_command_install.py  test_command_jsonapi.py  test_command_list.py  test_command_plone_upgrade.py  test_command_plone_upgrade_needed.py  test_command_sites.py  test_command_touch.py  test_command_user.py  test_command_utils.py  test_directory_meta_directive.py  test_directory_recorder.py  test_directory_scaffold.py  test_directory_scanner.py  test_directory_upgrade_steps.py  test_executioner.py  test_gatherer.py  test_helpers.py  test_jsonapi_plonesite.py  test_jsonapi_zopeapp.py  test_layers.py  test_manage_view.py  test_meta_import_profile.py  test_placefulworkflow.py  test_post_upgrade.py  test_progresslogger.py  test_savepoint_iterator.py  test_transactionnote.py  test_upgrade_step.py  test_utils.py  test_workflow.py
src/ftw/upgrade/tests/assets/: exclude-from-nav-index.xml  foo-property.xml  test-action.xml
