[project]
name = "collective.ftw.upgrade"
dynamic = ["version"]
description = "An upgrade control panel and upgrade helpers for plone upgrades."
readme = "README.rst"
license = "GPL-2.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Plone Community", email = "collective@plone.org" },
]
keywords = [
    "CMS",
    "Plone",
    "Python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Plone","Framework :: Plone :: 6.0","Framework :: Plone :: 6.1",
    "Framework :: Plone :: Addon",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python","Programming Language :: Python :: 3.10","Programming Language :: Python :: 3.11","Programming Language :: Python :: 3.12","Programming Language :: Python :: 3.13",
]
dependencies = [
    "Products.CMFPlone",
    "argcomplete",
    "inflection",
    "path.py >= 6.2",
    "requests",
    "setuptools",
    "six >= 1.12.0",
    "tarjan",
    "psutil",
]

[project.optional-dependencies]
test = [
    "plone.app.testing",
    "plone.classicui","plone.restapi[test]",
    "ftw.builder >= 2.0.0.dev0",
    "plone.testing",
    "plone.app.testing",
    "zc.buildout",
    "zc.recipe.egg",
    "freezegun",
]

[project.urls]
Homepage = "https://github.com/collective/collective.ftw.upgrade"
PyPI = "https://pypi.org/project/collective.ftw.upgrade"
Source = "https://github.com/collective/collective.ftw.upgrade"
Tracker = "https://github.com/collective/collective.ftw.upgrade/issues"


[project.entry-points."plone.autoinclude.plugin"]
target = "plone"

[project.scripts]
upgrade = "collective.ftw.upgrade.command:main"

[tool.uv]
managed = false

[tool.hatch.version]
path = "src/collective/ftw/upgrade/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
strict-naming = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/collective"]

[tool.towncrier]
directory = "news/"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
issue_format = "[#{issue}](https://github.com/collective/collective.ftw.upgrade/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "RUF001", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["collective.ftw.upgrade", "tests"]
branch = true
parallel = true
omit = [
  "src/collective/ftw/upgrade/locales/*.py",
]
